# rewinder

./: README.md  bun.lockb  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  screen.rs
