[package]
name = "rewinder"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-exists", "fs-create-dir", "fs-remove-dir", "fs-write-file", "fs-read-dir", "fs-remove-file", "fs-read-file", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.8"
mouse_position = "0.1.3"
tokio = { version = "1.37.0", features = ["full"] }
# Reason why I'm not using the original repo: https://github.com/Narsil/rdev/issues/74#issuecomment-2099808869
rdev = { git = "https://github.com/fufesou/rdev" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
